--- a/pong/pong.cabal
+++ b/pong/pong.cabal
@@ -22,5 +22,6 @@ executable pong
   -- other-extensions:
   build-depends:       base >=4.13 && <4.14
                      , gloss
+                     , random
   -- hs-source-dirs:
   default-language:    Haskell2010
