--- a/pong/pong.cabal
+++ b/pong/pong.cabal
@@ -23,5 +23,6 @@ executable pong
   build-depends:       base >=4.13 && <4.14
                      , gloss
                      , random
+                     , containers
   -- hs-source-dirs:
   default-language:    Haskell2010
