makefile and font

--- a/survival-c/Makefile
+++ b/survival-c/Makefile
@@ -1,6 +1,6 @@
 CC = gcc
 CFLAGS = -Wall -Wextra -std=c11
-LDFLAGS = -lSDL2 -lSDL2_image
+LDFLAGS = -lSDL2 -lSDL2_image -lm -lSDL2_ttf
 
 SRC = error.c rendering.c game.c main.c
 OBJ = $(SRC:.c=.o)
