--- a/survival/survival.cabal
+++ b/survival/survival.cabal
@@ -19,14 +19,16 @@ executable survival
   hs-source-dirs:      src
   main-is:             Main.hs
   
-  other-modules:       Game
+  other-modules:       Game, Rendering
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5
                       , array
-                      , gloss
+                      , gloss 
                       , containers
                       , sdl2
                       , sdl2-image
+                      , sdl2-ttf
+                      , vector
   ghc-options:         -Wall
                        -Wcompat
                        -Widentities
